[gd_scene load_steps=11 format=3 uid="uid://8lpd6ckiunhu"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_43261"]
[ext_resource type="PackedScene" uid="uid://bl1qohwo88hfc" path="res://scenes/guis/main_menu.tscn" id="2_5whs0"]
[ext_resource type="PackedScene" uid="uid://dyb46fejey8d8" path="res://scenes/guis/pause_menu.tscn" id="3_c8nk7"]
[ext_resource type="PackedScene" uid="uid://dnmtht1dnkjq4" path="res://scenes/guis/options.tscn" id="4_dapb2"]
[ext_resource type="PackedScene" uid="uid://camr2edmarv8v" path="res://scenes/guis/level_select.tscn" id="5_lciho"]
[ext_resource type="PackedScene" uid="uid://y2mi2enqrtr2" path="res://scenes/guis/level_won.tscn" id="6_6agyl"]

[sub_resource type="Animation" id="Animation_uoe7v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blackout/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Blackout/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_c5h5h"]
resource_name = "blackout_fade_in"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blackout/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Blackout/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_4j1ad"]
resource_name = "blackout_fade_out"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blackout/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Blackout/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yeeol"]
_data = {
"RESET": SubResource("Animation_uoe7v"),
"blackout_fade_in": SubResource("Animation_c5h5h"),
"blackout_fade_out": SubResource("Animation_4j1ad")
}

[node name="Main" type="Node2D"]
process_mode = 3
script = ExtResource("1_43261")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yeeol")
}

[node name="MainMenu" parent="." instance=ExtResource("2_5whs0")]

[node name="PauseMenu" parent="." instance=ExtResource("3_c8nk7")]
visible = false

[node name="OptionsMenu" parent="." instance=ExtResource("4_dapb2")]
visible = false

[node name="LevelWon" parent="." instance=ExtResource("6_6agyl")]
visible = false

[node name="LevelSelect" parent="." instance=ExtResource("5_lciho")]
visible = false

[node name="Blackout" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Blackout"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="show_options" from="MainMenu" to="." method="_on_main_menu_show_options"]
[connection signal="start_game" from="MainMenu" to="." method="_on_main_menu_start_game"]
[connection signal="quit_main_menu" from="PauseMenu" to="." method="_on_pause_menu_quit_main_menu"]
[connection signal="restart" from="PauseMenu" to="." method="_on_pause_menu_restart"]
[connection signal="resume" from="PauseMenu" to="." method="_on_pause_menu_resume"]
[connection signal="show_options" from="PauseMenu" to="." method="_on_pause_menu_show_options"]
[connection signal="close_options" from="OptionsMenu" to="." method="_on_options_menu_close_options"]
[connection signal="level_select" from="LevelWon" to="." method="_on_level_won_level_select"]
[connection signal="main_menu" from="LevelWon" to="." method="_on_level_won_main_menu"]
[connection signal="next_level" from="LevelWon" to="." method="_on_level_won_next_level"]
[connection signal="back_pressed" from="LevelSelect" to="." method="_on_level_select_back_pressed"]
[connection signal="level_selected" from="LevelSelect" to="." method="_on_level_select_level_selected"]
